# backend-beginner-projects

./: .gitignore  README.md
github-user-activity/: README.md  pyproject.toml
github-user-activity/github_user_activity/: activity_fetcher.py  cli.py  formatters.py
github_user_activity/: __main__.py  activity_fetcher.py
number-guessing-game/: README.md  main.py
todo-list-api/: app.ts  package-lock.json  package.json
todo-list-api-js/: README.md  package-lock.json  package.json
todo-list-api-js/src/: app.js
todo-list-api-js/src/config/: config.js
todo-list-api-js/src/controllers/: auth.controller.js  todo.controller.js
todo-list-api-js/src/database/: db.js
todo-list-api-js/src/middlewares/: auth.middleware.js
todo-list-api-js/src/models/: todo.model.js  user.model.js
todo-list-api-js/src/routes/: auth.routes.js  todo.routes.js
todo-list-api-js/src/services/: auth.services.js  todo.services.js
todo-list-api-ts/: package-lock.json  package.json
todo-list-api-ts/src/: app.ts
todo-list-api-ts/src/controllers/: index.ts  todo.controller.ts
todo-list-api-ts/src/database/: db.ts
todo-list-api-ts/src/models/: user.model.ts
todo-list-api-ts/src/routes/: auth.routes.ts  index.ts  todo.routes.ts
todo-list-api-ts/src/services/: auth.service.ts  todo.services.ts
todo-list-api/src/: app.ts
todo-list-api/src/config/: config.ts
unit-converter/flask/: README.md  app.py
weather-api/: .gitignore  README.md  requirements.txt
weather-api/api/: .env  api.py
weather-api/nodejs/: index.js  package-lock.json  package.json  weather.json
(+17 files in other folders)
